# llm-notion-wiki

./: .gitignore  CODEBASE.md  README.md  REQUIREMENTS_COVERAGE.md  bootstrap_llmwiki_notion_dynamic.sh  llmwiki_notion_setup.sh  pyproject.toml  verify_llmwiki_notion_dynamic.sh
.cursor/agents/: llmwiki-runtime.md
docs/: interface.md  shared.md  wp1-3.md  wp3-worker-algo.md  wp3.md
llmwiki_runtime/: __init__.py  cli.py  config.py  contracts.py  frontmatter.py  live_verify.py  llm.py  logging_utils.py  models.py  notion.py  paths.py  repository.py  service.py  sources.py  wiki_ops.py  worker.py
tests/: test_completion_features.py  test_frontmatter.py  test_http_service.py  test_llm.py  test_notion_client.py  test_repository.py  test_service_and_scripts.py  test_sources.py  test_wiki_ops.py  test_worker_flow.py
