[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llmwiki-runtime"
version = "0.1.0"
description = "Notion-backed LLMWiki runtime and worker"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
llmwiki-runtime = "llmwiki_runtime.cli:main"

[tool.setuptools]
packages = ["llmwiki_runtime"]
